EXTRA_DIST =									\
	$(Data_DATA)

Datadir = $(datadir)/gnome-power-manager/
#Datadir = $(datadir)/icons/hicolor/22x22/apps ?

Data_DATA =										\
	gnome-power-system-0-of-8.png				\
	gnome-power-system-1-of-8.png				\
	gnome-power-system-2-of-8.png				\
	gnome-power-system-3-of-8.png				\
	gnome-power-system-4-of-8.png				\
	gnome-power-system-5-of-8.png				\
	gnome-power-system-6-of-8.png				\
	gnome-power-system-7-of-8.png				\
	gnome-power-system-8-of-8.png				\
	gnome-power-system-ac-0-of-8.png			\
	gnome-power-system-ac-1-of-8.png			\
	gnome-power-system-ac-2-of-8.png			\
	gnome-power-system-ac-3-of-8.png			\
	gnome-power-system-ac-4-of-8.png			\
	gnome-power-system-ac-5-of-8.png			\
	gnome-power-system-ac-6-of-8.png			\
	gnome-power-system-ac-7-of-8.png			\
	gnome-power-system-ac-8-of-8.png			\
	gnome-power-system-ups-0-of-8.png			\
	gnome-power-system-ups-1-of-8.png			\
	gnome-power-system-ups-2-of-8.png			\
	gnome-power-system-ups-3-of-8.png			\
	gnome-power-system-ups-4-of-8.png			\
	gnome-power-system-ups-5-of-8.png			\
	gnome-power-system-ups-6-of-8.png			\
	gnome-power-system-ups-7-of-8.png			\
	gnome-power-system-ups-8-of-8.png
