EXTRA_DIST =						\
	$(Data_DATA)

Datadir = $(datadir)/gnome-power-manager/
#Datadir = $(datadir)/icons/hicolor/22x22/apps ?

Data_DATA =						\
	gnome-power-bat-0-of-8.png			\
	gnome-power-bat-1-of-8.png			\
	gnome-power-bat-2-of-8.png			\
	gnome-power-bat-3-of-8.png			\
	gnome-power-bat-4-of-8.png			\
	gnome-power-bat-5-of-8.png			\
	gnome-power-bat-6-of-8.png			\
	gnome-power-bat-7-of-8.png			\
	gnome-power-bat-8-of-8.png			\
	gnome-power-ac-0-of-8.png			\
	gnome-power-ac-1-of-8.png			\
	gnome-power-ac-2-of-8.png			\
	gnome-power-ac-3-of-8.png			\
	gnome-power-ac-4-of-8.png			\
	gnome-power-ac-5-of-8.png			\
	gnome-power-ac-6-of-8.png			\
	gnome-power-ac-7-of-8.png			\
	gnome-power-ac-8-of-8.png			\
	gnome-power-ups-0-of-8.png			\
	gnome-power-ups-1-of-8.png			\
	gnome-power-ups-2-of-8.png			\
	gnome-power-ups-3-of-8.png			\
	gnome-power-ups-4-of-8.png			\
	gnome-power-ups-5-of-8.png			\
	gnome-power-ups-6-of-8.png			\
	gnome-power-ups-7-of-8.png			\
	gnome-power-ups-8-of-8.png
