EXTRA_DIST =									\
	$(Data_DATA)

Datadir = $(datadir)/gnome-power-manager/

Data_DATA =										\
	acpower-48.png								\
	gnome-power.png								\
	battery-48.png								\
	emblem-ac.png								\
	emblem-bar.png								\
	brightness-000.png							\
	brightness-025.png							\
	brightness-050.png							\
	brightness-075.png							\
	brightness-100.png							\
	gnome-dev-acadapter.png						\
	gnome-dev-keyboard.png						\
	gnome-dev-mouse-optical.png					\
	gnome-dev-pda.png							\
	gnome-dev-battery.png						\
	gnome-dev-ups.png							\
	gnome-reboot.png							\
	gnome-shutdown.png							\
	gnome-suspend.png							\
	gnome-hibernate.png							\
	gnome-power-system-0-of-8.png				\
	gnome-power-system-1-of-8.png				\
	gnome-power-system-2-of-8.png				\
	gnome-power-system-3-of-8.png				\
	gnome-power-system-4-of-8.png				\
	gnome-power-system-5-of-8.png				\
	gnome-power-system-6-of-8.png				\
	gnome-power-system-7-of-8.png				\
	gnome-power-system-8-of-8.png				\
	gnome-power-system-ac-0-of-8.png			\
	gnome-power-system-ac-1-of-8.png			\
	gnome-power-system-ac-2-of-8.png			\
	gnome-power-system-ac-3-of-8.png			\
	gnome-power-system-ac-4-of-8.png			\
	gnome-power-system-ac-5-of-8.png			\
	gnome-power-system-ac-6-of-8.png			\
	gnome-power-system-ac-7-of-8.png			\
	gnome-power-system-ac-8-of-8.png
