EXTRA_DIST =					\
	$(Data_DATA)

Datadir = $(datadir)/gnome-power-manager/

Data_DATA =					\
	stock_about.png				\
	stock_notebook.png			\
	stock-properties.png			\
	gnome-power.png				\
	gnome-dev-acadapter.png			\
	gnome-dev-keyboard.png			\
	gnome-dev-mouse-optical.png		\
	gnome-dev-pda.png			\
	gnome-dev-battery.png			\
	gnome-dev-ups.png			\
	gnome-suspend.png			\
	gnome-hibernate.png
