EXTRA_DIST =				\
	$(Data_DATA)

Datadir = $(datadir)/icons/hicolor/22x22/apps

Data_DATA =				\
	gpm-ac-adapter.png		\
	gpm-brightness-lcd.png		\
	gpm-brightness-kbd.png		\
	gpm-brightness-lcd-disabled.png	\
	gpm-brightness-kbd-disabled.png	\
	gpm-brightness-lcd-invalid.png	\
	gpm-brightness-kbd-invalid.png	\
	gpm-hibernate.png		\
	gpm-suspend.png			\
	gpm-inhibit.png			\
	gpm-inhibit-invalid.png		\
	gpm-statistics.png		\
	gpm-keyboard-000.png		\
	gpm-keyboard-030.png		\
	gpm-keyboard-060.png		\
	gpm-keyboard-100.png		\
	gpm-mouse-000.png		\
	gpm-mouse-030.png		\
	gpm-mouse-060.png		\
	gpm-mouse-100.png		\
	gpm-primary-000.png		\
	gpm-primary-020.png		\
	gpm-primary-040.png		\
	gpm-primary-060.png		\
	gpm-primary-080.png		\
	gpm-primary-100.png		\
	gpm-primary-000-charging.png	\
	gpm-primary-020-charging.png	\
	gpm-primary-040-charging.png	\
	gpm-primary-060-charging.png	\
	gpm-primary-080-charging.png	\
	gpm-primary-100-charging.png	\
	gpm-primary-charged.png		\
	gpm-primary-missing.png		\
	gpm-ups-000.png			\
	gpm-ups-020.png			\
	gpm-ups-040.png			\
	gpm-ups-060.png			\
	gpm-ups-080.png			\
	gpm-ups-100.png			\
	gpm-ups-000-charging.png	\
	gpm-ups-020-charging.png	\
	gpm-ups-040-charging.png	\
	gpm-ups-060-charging.png	\
	gpm-ups-080-charging.png	\
	gpm-ups-100-charging.png	\
	gpm-ups-charged.png		\
	gpm-ups-missing.png
