EXTRA_DIST =				\
	$(Data_DATA)

Datadir = $(datadir)/gnome-power-manager

Data_DATA =				\
	ac-adapter.png			\
	keyboard-power-low.png		\
	mouse-power-low.png		\
	battery-charged.png		\
	battery-charging-000.png	\
	battery-charging-020.png	\
	battery-charging-040.png	\
	battery-charging-060.png	\
	battery-charging-080.png	\
	battery-charging-100.png	\
	battery-discharging-000.png	\
	battery-discharging-020.png	\
	battery-discharging-040.png	\
	battery-discharging-060.png	\
	battery-discharging-080.png	\
	battery-discharging-100.png	\
	ups-charged.png	\
	ups-charging-000.png		\
	ups-charging-020.png		\
	ups-charging-040.png		\
	ups-charging-060.png		\
	ups-charging-080.png		\
	ups-charging-100.png		\
	ups-discharging-000.png		\
	ups-discharging-020.png		\
	ups-discharging-040.png		\
	ups-discharging-060.png		\
	ups-discharging-080.png		\
	ups-discharging-100.png
