EXTRA_DIST =				\
	$(Data_DATA)

Datadir = $(datadir)/icons/hicolor/24x24/apps

Data_DATA =				\
	gnome-power-manager.png		\
	gpm-ac-adapter.png		\
	gpm-keyboard-power-low.png	\
	gpm-mouse-power-low.png		\
	gpm-battery-broken.png		\
	gpm-battery-charged.png		\
	gpm-battery-charging-000.png	\
	gpm-battery-charging-020.png	\
	gpm-battery-charging-040.png	\
	gpm-battery-charging-060.png	\
	gpm-battery-charging-080.png	\
	gpm-battery-charging-100.png	\
	gpm-battery-discharging-000.png	\
	gpm-battery-discharging-020.png	\
	gpm-battery-discharging-040.png	\
	gpm-battery-discharging-060.png	\
	gpm-battery-discharging-080.png	\
	gpm-battery-discharging-100.png	\
	gpm-ups-broken.png		\
	gpm-ups-charged.png		\
	gpm-ups-charging-000.png	\
	gpm-ups-charging-020.png	\
	gpm-ups-charging-040.png	\
	gpm-ups-charging-060.png	\
	gpm-ups-charging-080.png	\
	gpm-ups-charging-100.png	\
	gpm-ups-discharging-000.png	\
	gpm-ups-discharging-020.png	\
	gpm-ups-discharging-040.png	\
	gpm-ups-discharging-060.png	\
	gpm-ups-discharging-080.png	\
	gpm-ups-discharging-100.png
