EXTRA_DIST =				\
	$(Data_DATA)

Datadir = $(datadir)/icons/hicolor/48x48/apps

Data_DATA =				\
	gnome-power-manager.png		\
	gpm-brightness.png		\
	gpm-battery-charged.png		\
	gpm-battery-critical.png	\
	gpm-ups-critical.png		\
	gpm-keyboard-power-low.png	\
	gpm-mouse-power-low.png		\
	gpm-suspend-to-disk.png		\
	gpm-suspend-to-ram.png
